@@ -50,6 +50,7 @@ public class TinyPotatoBlockItem extends ZetaBlockItem implements IRuneColorProv
 
 	private void updateData(ItemStack stack) {
 		CompoundTag tileTag = stack.getTagElement("BlockEntityTag");
+		// TODO: seems to me like this whole block isnt needed as tater never has that tag
 		if(tileTag != null) {
 			// this code seems to move angry tag out of blockEntity tag. Maybe it could be simplified
 			if(tileTag.contains(TinyPotatoBlockEntity.TAG_ANGRY, Tag.TAG_ANY_NUMERIC)) {
