@@ -4,9 +4,11 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 
 import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.world.item.ArmorItem;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.level.block.entity.BlockEntity;
 import org.jetbrains.annotations.Nullable;
 import org.violetmoon.quark.addons.oddities.block.be.MagnetBlockEntity;
 import org.violetmoon.quark.addons.oddities.module.MagnetsModule;
@@ -30,6 +32,7 @@ import net.minecraft.world.level.material.PushReaction;
 public class MagnetSystem {
 
 	private static final HashSet<Block> magnetizableBlocks = new HashSet<>();
+	private static final HashSet<Item> magnetizableItems = new HashSet<>();
 
 	private static final HashMap<Block, IMagnetMoveAction> BLOCK_MOVE_ACTIONS = new HashMap<>();
 
@@ -38,6 +41,7 @@ public class MagnetSystem {
 	}
 
 	public static IMagnetMoveAction getMoveAction(Block block) {
+		if (block instanceof IMagnetMoveAction ma)return ma;
 		return BLOCK_MOVE_ACTIONS.get(block);
 	}
 
@@ -66,6 +70,8 @@ public class MagnetSystem {
 		RecipeCrawlHandler.recursivelyFindCraftedItemsFromStrings(MagnetsModule.magneticDerivationList, Collections.emptyList(), Collections.emptyList(), i -> {
 			if(i instanceof BlockItem bi)
 				magnetizableBlocks.add(bi.getBlock());
+			if(i instanceof ArmorItem) //this could use a better check... And whitelist
+				magnetizableItems.add(i);
 		});
 
 		//...in favor of manual fixup
@@ -84,7 +90,7 @@ public class MagnetSystem {
 
 	public static PushReaction getPushAction(MagnetBlockEntity magnet, BlockPos pos, BlockState state, Direction moveDir) {
 		Level world = magnet.getLevel();
-		if(world != null && isBlockMagnetic(state)) {
+		if(world != null && canBlockBeMagneticallyMoved(state, pos, world, moveDir, magnet)) {
 			BlockPos targetLocation = pos.relative(moveDir);
 			BlockState stateAtTarget = world.getBlockState(targetLocation);
 			if(stateAtTarget.isAir())
@@ -96,14 +102,27 @@ public class MagnetSystem {
 		return PushReaction.BLOCK;
 	}
 
+	public static boolean isItemMagnetic(Item item) {
+		return magnetizableItems.contains(item);
+	}
+
+	@Deprecated(forRemoval = true)
 	public static boolean isBlockMagnetic(BlockState state) {
 		Block block = state.getBlock();
+		return (magnetizableBlocks.contains(block) || BLOCK_MOVE_ACTIONS.containsKey(block));
+	}
 
-		if(block == Blocks.PISTON || block == Blocks.STICKY_PISTON) {
-			if(state.getValue(PistonBaseBlock.EXTENDED))
+	public static boolean canBlockBeMagneticallyMoved(BlockState state, BlockPos pos, Level level, Direction moveDir, BlockEntity magnet) {
+		Block block = state.getBlock();
+
+		if (block == Blocks.PISTON || block == Blocks.STICKY_PISTON) {
+			if (state.getValue(PistonBaseBlock.EXTENDED))
 				return false;
 		}
+		if (block == MagnetsModule.magnet) return false;
 
-		return block != MagnetsModule.magnet && (magnetizableBlocks.contains(block) || BLOCK_MOVE_ACTIONS.containsKey(block) || block instanceof IMagnetMoveAction);
+		IMagnetMoveAction action = getMoveAction(block);
+		if (action != null) return action.canMagnetMove(level, pos, moveDir, state, magnet);
+		return (magnetizableBlocks.contains(block));
 	}
 }
